--- a/src/main/resources/mall.properties
+++ b/src/main/resources/mall.properties
@@ -1,10 +1,9 @@
 ftp.server.ip=192.168.43.61
 ftp.user=admin
 ftp.pass=java0120
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=http://img.guangping.store/
 
+alipay.callback.url=http://www.guangping.store/order/alipay_callback.do
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
-
-password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
+password.salt = songshuhang-sdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
