--- a/src/main/resources/mall.properties
+++ b/src/main/resources/mall.properties
@@ -1,6 +1,6 @@
-ftp.server.ip=192.168.43.61
-ftp.user=admin
-ftp.pass=java0120
+ftp.server.ip=47.106.166.151
+ftp.user=ftpuser
+ftp.pass=hgp0120
 ftp.server.http.prefix=http://img.guangping.store/
 
 alipay.callback.url=http://www.guangping.store/order/alipay_callback.do
