--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -2,7 +2,7 @@ db.driverLocation=E:/Java/jar/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/online_mall?characterEncoding=utf-8
 db.username=root
-db.password=admin
+db.password=hgp0120
 
 db.initialSize = 20
 db.maxActive = 50
