--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,4 +1,4 @@
-db.driverLocation=E:/Java/jar/mysql-connector-java-5.1.6-bin.jar
+db.driverLocation=/developer/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/online_mall?characterEncoding=utf-8
 db.username=root
