--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -4,10 +4,10 @@ db.url=jdbc:mysql://47.106.166.151:3306/online_mall?characterEncoding=utf-8
 db.username=root
 db.password=hgp0120
 
-db.initialSize = 20
-db.maxActive = 50
-db.maxIdle = 20
-db.minIdle = 10
-db.maxWait = 10
-db.defaultAutoCommit = true
-db.minEvictableIdleTimeMillis = 3600000
+db.initialSize=20
+db.maxActive=50
+db.maxIdle=20
+db.minIdle=10
+db.maxWait=10
+db.defaultAutoCommit=true
+db.minEvictableIdleTimeMillis=3600000
