--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,7 +1,7 @@
 db.driverLocation=/developer/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://47.106.166.151:3306/online_mall?characterEncoding=utf-8
-db.username=root
+db.url=jdbc:mysql://localhost:3306/online_mall?characterEncoding=utf-8
+db.username=mmall
 db.password=hgp0120
 db.initialSize=20
 db.maxActive=50
