--- a/src/main/resources/datasource.properties
+++ b/src/main/resources/datasource.properties
@@ -1,8 +1,8 @@
 db.driverLocation=/developer/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/online_mall?characterEncoding=utf-8
-db.username=mmall
-db.password=hgp0120
+db.username=root
+db.password=admin
 db.initialSize=20
 db.maxActive=50
 db.maxIdle=20
