--- a/src/main/resources.dev/mall.properties
+++ b/src/main/resources.dev/mall.properties
@@ -33,3 +33,11 @@ redis.test.return=false
 
 #redis config end
 
+#closeOrderTaskTime start
+
+close.order.task.time.hour=2
+
+#分布式锁的超时时间（毫秒数）
+lock.timeout=50000
+
+#closeOrderTaskTime end
